--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
     <h1>Travel Blog</h1>
     <p>Welcome to my travel blog!</p>
+    <img src="./IMG_20211021_161648_872.jpg" alt="">
     <script src="./main.js"></script>
     <script src="./navigation.js"></script>
 </body>
