--- a/index.html
+++ b/index.html
@@ -8,6 +8,14 @@
     <title>Document</title>
 </head>
 <body>
+    <nav class="nab-bar">
+    <ul>
+        <li>Home</li>
+        <li>Destinations</li>
+        <li>Blog</li>
+        <li>About me</li>
+    </ul>
+    </nav>
     <h1>Travel Blog</h1>
     <p>Welcome to my travel blog!</p>
     <img src="./IMG_20211021_161648_872.jpg" alt="">
