--- a/index.html
+++ b/index.html
@@ -19,6 +19,12 @@
     <h1>Travel Blog</h1>
     <p>Welcome to my travel blog!</p>
     <img src="./IMG_20211021_161648_872.jpg" alt="">
+    <footer>
+        <p>With love</p>
+        <a href="">instagram</a>
+        <a href="">facebook</a>
+        <a href="">twitter</a>
+    </footer>
     <script src="./main.js"></script>
     <script src="./navigation.js"></script>
 </body>
