--- a/index.html
+++ b/index.html
@@ -9,21 +9,31 @@
 </head>
 <body>
     <nav class="nab-bar">
-    <ul>
-        <li>Home</li>
-        <li>Destinations</li>
-        <li>Blog</li>
-        <li>About me</li>
+    <ul class="nab-bar-list">
+        <li class="item">Home</li>
+        <li class="item">Destinations</li>
+        <li class="item">Blog</li>
+        <li class="item">About me</li>
     </ul>
+    <div class="input-wrapper">
+        <input type="search" placeholder="search" class="search-bar">
+        <span class="magnifying-glass-icon"><img src="./img/Icons/magnifying-glass-icon.png" alt="Magnifying glass">
+        </span>
+    </div>
     </nav>
+    <div class="image-container">
+        <img src="./img/IMG_20211021_161648_872.jpg" alt="Space Needle">
+    </div>
     <h1>Travel Blog</h1>
     <p>Welcome to my travel blog!</p>
-    <img src="./IMG_20211021_161648_872.jpg" alt="">
-    <footer>
-        <p>With love</p>
-        <a href="">instagram</a>
-        <a href="">facebook</a>
-        <a href="">twitter</a>
+    <footer class="footer">
+        <p class="footer-text">With love</p>
+        <div class="social-networks">
+            <p class="follow-text">Follow me</p>
+            <img src="./img/icons/Instagram-logo-White.png" alt="instagram logo" class="social-logo">
+            <img src="./img/icons/facebook-logo-white.png" alt="facebook logo" class="social-logo">
+            <img src="./img/icons/twitter-logo-white.png" alt="twitter logo" class="social-logo">      
+        </div>
     </footer>
     <script src="./main.js"></script>
     <script src="./navigation.js"></script>
