--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 <body>
     <nav class="nab-bar">
     <ul class="nab-bar-list">
-        <li class="item">Home</li>
-        <li class="item">Destinations</li>
-        <li class="item">Blog</li>
-        <li class="item">About me</li>
+        <li class="item"><a href="">Home</a></li>
+        <li class="item"><a href="">Destinations</a></li>
+        <li class="item"><a href="">Blog</a></li>
+        <li class="item"><a href="">About me</a></li>
     </ul>
     <div class="input-wrapper">
         <input type="search" placeholder="search" class="search-bar">
@@ -26,6 +26,23 @@
     </div>
     <h1>Travel Blog</h1>
     <p>Welcome to my travel blog!</p>
+
+</section>
+<h3 class="subtitle">Our recommendations</h3>
+<section class="images-container--slider">
+    <article class="pictures-container--card">
+        <a href="#" class="images-link"><img src="./img/IMG_20211021_161648_872.jpg" alt="" class="images-card"></a>
+    </article>
+    <article class="pictures-container--card">
+        <a href="#" class="images-link"><img src="./img/IMG_20211021_161648_872.jpg" alt="" class="images-card"></a>
+    </article>
+    <article class="pictures-container--card">
+        <a href="#" class="images-link"><img src="./img/IMG_20211021_161648_872.jpg" alt="" class="images-card"></a>
+    </article>
+    <article class="pictures-container--card">
+        <a href="#" class="images-link"><img src="./img/IMG_20211021_161648_872.jpg" alt="" class="images-card"></a>
+</article>
+</section>
     <footer class="footer">
         <p class="footer-text">With love</p>
         <div class="social-networks">
