--- a/index.html
+++ b/index.html
@@ -8,26 +8,29 @@
     <title>Document</title>
 </head>
 <body>
-    <nav class="nab-bar">
-    <ul class="nab-bar-list">
-        <li class="item"><a href="">Home</a></li>
-        <li class="item"><a href="">Destinations</a></li>
-        <li class="item"><a href="">Blog</a></li>
-        <li class="item"><a href="">About me</a></li>
-    </ul>
-    <div class="input-wrapper">
-        <input type="search" placeholder="search" class="search-bar">
-        <span class="magnifying-glass-icon"><img src="./img/Icons/magnifying-glass-icon.png" alt="Magnifying glass">
-        </span>
-    </div>
-    </nav>
-    <div class="image-container">
-        <img src="./img/IMG_20211021_161648_872.jpg" alt="Space Needle">
-    </div>
-    <h1>Travel Blog</h1>
-    <p>Welcome to my travel blog!</p>
+    <header>
+        <nav class="nab-bar">
+        <ul class="nab-bar-list">
+            <li class="item"><a href="">Home</a></li>
+            <li class="item"><a href="">Destinations</a></li>
+            <li class="item"><a href="">Blog</a></li>
+            <li class="item"><a href="">About me</a></li>
+        </ul>
+        <div class="input-wrapper">
+            <input type="search" placeholder="search" class="search-bar">
+            <span class="magnifying-glass-icon"><img src="./img/Icons/magnifying-glass-icon.png" alt="Magnifying glass">
+            </span>
+        </div>
+        </nav>
+    </header>
+    <article>
+        <div class="image-container">
+            <img src="./img/IMG_20211021_161648_872.jpg" alt="Space Needle">
+        </div>
+        <h1>Travel Blog</h1>
+        <p>Welcome to my travel blog!</p>
+    </article>
 
-</section>
 <h3 class="subtitle">Our recommendations</h3>
 <section class="images-container--slider">
     <article class="pictures-container--card">
