--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Dosis:wght@300;400;500;700;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./styles.css">
     <title>Document</title>
 </head>
@@ -45,6 +48,7 @@
     <article class="pictures-container--card">
         <a href="#" class="images-link"><img src="./img/IMG_20211021_161648_872.jpg" alt="" class="images-card"></a>
 </article>
+
 </section>
     <footer class="footer">
         <p class="footer-text">With love</p>
