--- a/index.html
+++ b/index.html
@@ -61,5 +61,6 @@
     </footer>
     <script src="./main.js"></script>
     <script src="./navigation.js"></script>
+    <script src="./nodes.js"></script>
 </body>
 </html>
