--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </header>
     <article>
         <div class="image-container">
-            <img src="./img/IMG_20211021_161648_872.jpg" alt="Space Needle">
+            <img src="./img/20220924_172425.jpg" alt="Space Needle">
         </div>
         <h1>Travel Blog</h1>
         <p>Welcome to my travel blog!</p>
@@ -48,7 +48,40 @@
     <article class="pictures-container--card">
         <a href="#" class="images-link"><img src="./img/IMG_20211021_161648_872.jpg" alt="" class="images-card"></a>
 </article>
-
+</section>
+<section>
+    <h2>Cities in the US</h2>
+    <div class="city-images--container">
+        <div>
+            <div class="container1">
+                <img src="./img/20220924_172425.jpg" alt="" class="image-1">
+                <p class="txt-1">Las Vegas</p>
+                <p class="txt-1">Known as "Sin City,"</p>
+            </div>
+        </div>
+        <div>
+            <div class="container1">
+                <img src="./img/20220924_172425.jpg" alt="" class="image-1">
+                <p class="txt-1">Las Vegas</p>
+                <p class="txt-1">Known as "Sin City,"</p>
+            </div>
+        </div>
+        <div>
+            <div class="container1">
+                <img src="./img/20220924_172425.jpg" alt="" class="image-1">
+                <p class="txt-1">Las Vegas</p>
+                <p class="txt-1">Known as "Sin City,"</p>
+            </div>
+        </div>
+        <div>
+            <div class="container1">
+                <img src="./img/20220924_172425.jpg" alt="" class="image-1">
+                <p class="txt-1">Las Vegas</p>
+                <p class="txt-1">Known as "Sin City,"</p>
+            </div>
+        </div>
+       
+    </div>
 </section>
     <footer class="footer">
         <p class="footer-text">With love</p>
