--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 <body>
     <header>
         <nav class="nab-bar">
+            <img src="../travel--blog/img/Icons/hamburguerMenu.png" alt="Menu" class="hamburguer-menu-icon">
         <ul class="nab-bar-list">
             <li class="item"><a href="">Home</a></li>
             <li class="item"><a href="">Destinations</a></li>
